# plorth

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md  index.html  mkdocs.yml  plorth-emscripten-repl.js  plorth-emscripten-repl.js.mem  plorth-repl.js  plorth-repl.wasm  repl.html  search.html  sitemap.xml
api/: index.html
cli/: .gitignore  CMakeLists.txt  README.md
cli/include/plorth/cli/: config.hpp.in  terminal.hpp
cli/src/: api.cpp  main.cpp  repl.cpp  terminal.cpp  utils.cpp  utils.hpp
docs/: CNAME  api.md  index.html  index.md  installation.md  language.md  plorth-repl.js  plorth-repl.js.mem  plorth-repl.wasm  repl.html
editor/: plorth.vim
examples/: array-reduce.plorth  bottles-of-beer.plorth  bottles_of_beer.plorth  combinators.plorth  factorial.plorth  fibonacci.plorth  hello-world.plorth  mandelbrot.plorth  object-immutability.plorth
gui/: CMakeLists.txt  README.md
gui/include/plorth/gui/: context.hpp  dictionary-display.hpp  line-display.hpp  line-editor.hpp  stack-display.hpp  window.hpp
gui/src/: context.cpp  dictionary-display.cpp  line-display.cpp  line-editor.cpp  main.cpp  stack-display.cpp  utils.cpp  utils.hpp  window.cpp
include/plorth/: config.hpp.in  context.hpp  memory.hpp  plorth-context.hpp  plorth-memory.hpp  plorth-runtime.hpp  plorth-value.hpp  plorth.hpp  position.hpp  ref.hpp  runtime.hpp  token.hpp  unicode.hpp  value-array.hpp  value-boolean.hpp  value-error.hpp  value-null.hpp  value-number.hpp  value-object.hpp  value-quote.hpp  value-string.hpp  value-symbol.hpp  value.hpp
installation/: index.html
language/: index.html
lib/: ansi-terminal.plorth  class.plorth
lib/math/: range.plorth
lib/time/: month.plorth
libplorth/: .gitignore  CMakeLists.txt  README.md  unicode.cpp  utils.hpp  value-number.cpp
libplorth/include/plorth/: config.hpp.in  context.hpp  dictionary.hpp  io-input.hpp  io-output.hpp  memory.hpp  module.hpp  parser.hpp  plorth.hpp  position.hpp  ref.hpp  runtime.hpp  token.hpp  unicode.hpp  value-array.hpp  value-boolean.hpp  value-error.hpp  value-number.hpp  value-object.hpp  value-quote.hpp  value-string.hpp  value-symbol.hpp  value-word.hpp  value.hpp  version.hpp
libplorth/src/: compiler.cpp  context.cpp  dictionary.cpp  eval.cpp  exec.cpp  globals.cpp  io-input.cpp  io-output.cpp  memory.cpp  module.cpp  parser.cpp  position.cpp  runtime.cpp  unicode.cpp  utils.cpp  utils.hpp  value-array.cpp  value-boolean.cpp  value-error.cpp  value-number.cpp  value-object.cpp  value-quote.cpp  value-string.cpp  value-symbol.cpp  value-word.cpp  value.cpp
mkdocs/: search_index.json
plorth/: CMakeLists.txt
plorth-cli/: CMakeLists.txt  repl.cpp
plorth-webassembly/: CMakeLists.txt  README.md  package.json
plorth-webassembly/src/: main.cpp
plorth/src/: main.cpp  repl.cpp
repl/: index.html  plorth.js  plorth.wasm  repl.js  style.css
runtime/: assert.plorth  test.plorth
runtime/collections/: set.plorth
runtime/time/: weekday.plorth
scripts/: generator-apidoc.pl  run-tests.sh
src/: array.cpp  array.hpp  bool.cpp  bool.hpp  compiler.cpp  config.hpp.in  console.cpp  context.cpp  context.hpp  emscripten.cpp  error.cpp  error.hpp  globals.cpp  io.cpp  main.cpp  memory.cpp  memory.hpp  module.cpp  null.hpp  number.cpp  number.hpp  object.cpp  object.hpp  plorth.hpp  quote.cpp  quote.hpp  repl.cpp  runtime-array.cpp  runtime-bool.cpp  runtime-dictionary.cpp  runtime-error.cpp  runtime-number.cpp  runtime-object.cpp  runtime-quote.cpp  runtime-string.cpp  runtime.cpp  runtime.hpp  stack.cpp  state.cpp  state.hpp  (+21 more)
tests/: framework.plorth  test-array.plorth  test-boolean.plorth  test-globals.plorth  test-number.plorth  test-object.plorth  test-quote.plorth  test-string.plorth  test-symbol.plorth  test-word.plorth
webassembly/: CMakeLists.txt  index.d.ts  index.js  package-lock.json  plorth.wasm
webassembly/include/plorth/: config.hpp
webassembly/src/: main.cpp
