CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(plorth C CXX)

OPTION(
  PLORTH_ENABLE_CLI
  "Whether CLI interpreter should be built or not."
  ON
)

OPTION(
  PLORTH_ENABLE_GUI
  "Whether GUI interpreter should be built or not."
  OFF
)

OPTION(
  PLORTH_ENABLE_WEBASSEMBLY
  "Whether WebAssembly interpreter should be built or not."
  OFF
)

INCLUDE(CheckCXXCompilerFlag)

CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)

IF(COMPILER_SUPPORTS_CXX11)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSEIF(COMPILER_SUPPORTS_CXX0X)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
ELSE()
  MESSAGE(FATAL_ERROR "Compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
ENDIF()

ADD_SUBDIRECTORY(libplorth)
IF(PLORTH_ENABLE_CLI)
  ADD_SUBDIRECTORY(cli)
ENDIF()
IF(PLORTH_ENABLE_GUI)
  ADD_SUBDIRECTORY(gui)
ENDIF()
IF(PLORTH_ENABLE_WEBASSEMBLY)
  ADD_SUBDIRECTORY(webassembly)
ENDIF()
