CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(plorth-webassembly C CXX)

IF(NOT DEFINED ENV{EMSCRIPTEN})
  MESSAGE(FATAL_ERROR "Emscripten environment variable wasn't found.")
ENDIF()

SET(EMSCRIPTEN_CXX_FLAGS "--bind -s WASM=1 -s MODULARIZE=1 -s EXPORT_NAME=\"'Plorth'\"")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EMSCRIPTEN_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${EMSCRIPTEN_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${EMSCRIPTEN_CXX_FLAGS}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../libplorth/include)

ADD_EXECUTABLE(
  plorth-webassembly
  ../plorth/src/repl.cpp
  src/main.cpp
)

TARGET_LINK_LIBRARIES(
  plorth-webassembly
  plorth
)

SET_TARGET_PROPERTIES(
  plorth-webassembly
  PROPERTIES OUTPUT_NAME plorth
)
